# cautious-rotary-phone

WindowsFormsApp6/: Form1.Designer.cs  Form1.cs  Program.cs  WindowsFormsApp6.csproj  WindowsFormsApp6.sln
WindowsFormsApp6/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
lab1/: Cargo.toml  Trunk.toml  index.html
lab1/src/: main.rs
lab1/src-tauri/: Cargo.toml  Tauri.toml  __tauri.conf.json
lab1/src-tauri/src/: main.rs
lab2/WinFormsApp1/: WinFormsApp1.sln
lab2/WinFormsApp1/WinFormsApp1/: Form1.Designer.cs  Form1.cs
